@@ -1,3 +1,6 @@
+Thu Apr 15 19:26:07 MET DST 1999 hannes
+  * start to implement debugger (sdb.h,sdb.cc, febase*, iplib,cc, scanner)
+
 Tue Mar 16 15:54:02 MET 1999 hannes
   * introduced new routine ERROR(string) (iparith.cc, tok.h)
   * added trace flag for proc (ipid.cc iplib.cc, febase*)
